update prescription logic change.